Courses :: Fix Overview spacing

--- a/scss/templates/courses/overview.scss
+++ b/scss/templates/courses/overview.scss
@@ -6,6 +6,10 @@
   text-align: center;
   margin-bottom: 3rem;
 
+  @include media-breakpoint-up(lg) {
+    margin-bottom: 5rem;
+  }
+
   .heading {
     position: relative;
     padding-bottom: 1.5rem;
